# dynamixel_motor

dynamixel_controllers/nodes/: controller_manager.py
dynamixel_controllers/src/dynamixel_controllers/: joint_trajectory_action_controller.py  joint_velocity_controller.py
dynamixel_driver/: CMakeLists.txt  package.xml
dynamixel_driver/src/dynamixel_driver/: dynamixel_io.py  dynamixel_serial_proxy.py
dynamixel_driver/srv/: SetMotorOffset.srv
